tests/NormalTests/paczka1/small_fuzzy/68801869.err
Error in line 7: NiZajM S454 47,8
Error in line 11: PfXorl A877 37,1
